syntax = "proto3";
option go_package = "./Proto/generated";  



// Request message for rate limiting check
message RateLimitRequest {
    string service_name = 1;             
    string action_name = 2;  
    string config_name = 3;            
    string uid = 4;                
    string oid = 5;         
}



// Response message for rate limiting check
message RateLimitResponse {
    bool is_allowed = 1;       
    int32 remaining = 2;   
    int32 limit = 3;
    int32 reset_time = 4;      
    int32 reset_after = 5; 

    // Error handling fields
    int32 error_code = 6;      
    string error_message = 7;  
}

// Empty message for void responses
message Void {}

// Health check response message
message HealthCheckResponse {
    string status = 1;          
}


// RateLimiter service definition
service rate_limit_service {

    rpc GetApplicationLayerRateLimit(RateLimitRequest) returns (RateLimitResponse);    
    rpc GetHealth(Void) returns (HealthCheckResponse);

}
